k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-friends-connect
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80  
  selector:
    app: hello-friends-connect
  type: ClusterIP
